tests/reject/classEscapingOverride.emojic
🐇 🐟 🍇
  🆕 🍇🍉

  ❗️ 🙋 🍇
    😀 🔤I’m a fish.🔤❗️
  🍉
🍉

🐇 🦍 🍇
  🖍🆕 pet 🐡

  🆕 🍼 pet 🐡 🍇
  🍉
🍉

🐇 🐡 🐟 🍇
  ✒️❗️ 🙋 🍇
    🆕🦍 👇❗️
  🍉
🍉

🏁 🍇
  🆕🐟❗️ ➡️ fish
  🙋 fish❗️
🍉
